# linkml-solr

./: .gitignore  Makefile  Pipfile  README.md  index.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yaml  pr-test.yaml  pypi-publish.yaml
linkml_solr/: __init__.py  cli.py  mapper.py  query.py  solrmodel.py  solrschema.py  solrschemagen.py
linkml_solr/utils/: golr_schema_utils.py  solr_bulkload.py
model/schema/: solrschema.yaml
tests/: __init__.py  test_amigo.py  test_create_load.py  test_import.py  test_query.py  test_remote.py  test_solrschemagen.py
tests/inputs/: books.csv  books.json  books2.csv  gencc_example.tsv
tests/test_golr/: term-autocomplete-config.yaml
tests/test_models/: amigo.py  amigo.yaml  books.py  books.yaml  books_no_hint.yaml  core.yaml  dbont.py  dbont.yaml  gencc.py  gencc.yaml  kitchen_sink.py  kitchen_sink.yaml  uniprot.py  uniprot.yaml
