[tool.poetry]
name = "linkml-solr"
version = "0.1.6"
description = ""
authors = ["Chris Mungall <cjm@berkeleybop.org>", "Kevin Schaper <kevin@tislab.org"]

[tool.poetry.scripts]
lsolr = "linkml_solr.cli:main"

[tool.poetry.dependencies]
python = "^3.8.1"
linkml = "^1.7.0"
linkml-runtime = ">=1.7.4"
pysolr = "^3.9.0"
linkml-dataops = "^0.1.0"
jsonasobj = "^1.3.1"
cbor2 = "^5.4.0"
pandas = "^2.0.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
